--- a/karros-track-profiler-api-application/src/main/resources/application.properties
+++ b/karros-track-profiler-api-application/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-server.port=8090
+server.port=8099
 spring.h2.console.enabled=true
 spring.datasource.platform=h2
-spring.datasource.url=jdbc:h2:file:C:/data/sample
+spring.datasource.url=jdbc:h2:file:C:/data/karros-track-profiler
